--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Ensure Kube State metrics namespace exists
+  import_tasks: ../../_base.deploy/tasks/custom-namespace.yml
+  vars:
+    application_namespace: "{{ kube_state_metrics.namespace }}"
+
 - name: Ensure Kube State metrics image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
