Migrate monitoring-node-exporter to a dedicated namespace

--- a/ansible/install_applications/vars/monitoring-node-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-node-exporter.yml
@@ -10,6 +10,7 @@ _node_exporter_var_loader:
 node_exporter:
   enabled: "{{ node_exporter_enabled | default(True) }}"
 
+  namespace: "monitoring-node-exporter"
   base_image: "{{ _node_exporter_var_loader.base_image }}"
 
   container:
