Migrate monitoring-nginx-exporter to a dedicated namespace

--- a/ansible/install_applications/vars/monitoring-nginx-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-nginx-exporter.yml
@@ -9,6 +9,7 @@ _nginx_exporter_var_loader:
 nginx_exporter:
   enabled: "{{ nginx_exporter_enabled | default(True) }}"
 
+  namespace: "monitoring-nginx-exporter"
   base_image: "{{ _nginx_exporter_var_loader.base_image }}"
 
   container:
