Migrate monitoring-gluster-exporter to a dedicated namespace

--- a/ansible/install_applications/vars/monitoring-gluster-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-gluster-exporter.yml
@@ -2,5 +2,6 @@
 
 gluster_exporter:
   enabled: "{{ gluster_exporter_enabled | default(True) }}"
-
+  
+  namespace: "monitoring-gluster-exporter"
   port: 8090
