--- a/ansible/install_applications/roles/monitoring-gluster-exporter.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-gluster-exporter.deploy/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Ensure Gluster Exporter namespace exists
+  import_tasks: ../../_base.deploy/tasks/custom-namespace.yml
+  vars:
+    application_namespace: "{{ gluster_exporter.namespace }}"
+
 - name: Deploy Gluster Exporter
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
