--- a/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Ensure apcups-exporter namespace exists
+  import_tasks: ../../_base.deploy/tasks/custom-namespace.yml
+  vars:
+    application_namespace: "{{ apcups_exporter.namespace }}"
+
 - name: Ensure apcups-exporter image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
