--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Ensure Prometheus namespace exists
+  import_tasks: ../../_base.deploy/tasks/custom-namespace.yml
+  vars:
+    application_namespace: "{{ prometheus.namespace }}"
+
 - name: Ensure Prometheus Operator image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
@@ -63,6 +68,7 @@
 - name: Deploy Prometheus Rules
   k8s:
     definition: "{{ lookup(item | regex_search('.j2$') | ternary('template','file'), item) }}"
+    namespace: "{{ prometheus.namespace }}"
     state: present
   with_fileglob:
     - "{{ role_path }}/app/deploy/rules/*.yaml*"
