--- a/ansible/install_applications/vars/monitoring-prometheus-operator.yml
+++ b/ansible/install_applications/vars/monitoring-prometheus-operator.yml
@@ -27,11 +27,12 @@ _prometheus_var_loader:
     repo: quay.io
     name: "prometheus/prometheus"
     tag: "v2.11.0"
+  namespace: "monitoring-prometheus"
 
 prometheus:
   retention: "{{ prometheus_retention | default('7d') }}"
-  allowed_namespaces: "{{ prometheus_allowed_namespaces | default(prometheus_allowed_namespaces_default) }}"
 
+  namespace: "{{ _prometheus_var_loader.namespace }}"
   base_image: "{{ _prometheus_var_loader.base_image }}"
 
   container:
@@ -40,14 +41,9 @@ prometheus:
     requests_memory: "{{ prometheus_container_requests_memory | default('512Mi') }}"
     limits_cpu: "{{ prometheus_container_limits_cpu | default('500m') }}"
     limits_memory: "{{ prometheus_container_limits_memory | default('512Mi') }}"
-
-prometheus_allowed_namespaces_default:
-  - default
-  - kube-system
-  - ingress-nginx
-  - monitoring
-  - logging
-
+  
+  servername: "prometheus-k8s.{{ _prometheus_var_loader.namespace }}.svc.cluster.local"
+  
 
 # To avoid loops inside alertmanager
 _alertmanager_var_loader:
