Migrate monitoring-grafana to a dedicated namespace

--- a/ansible/install_applications/vars/monitoring-grafana.yml
+++ b/ansible/install_applications/vars/monitoring-grafana.yml
@@ -9,6 +9,7 @@ _grafana_var_loader:
 grafana:
   enabled: "{{ grafana_enabled | default(True) }}"
 
+  namespace: "monitoring-grafana"
   base_image: "{{ _grafana_var_loader.base_image }}"
 
   container:
