Migrate infra-unifi to a dedicated namespace

--- a/ansible/install_applications/vars/infra-unifi.yml
+++ b/ansible/install_applications/vars/infra-unifi.yml
@@ -9,6 +9,7 @@ _unifi_var_loader:
 unifi:
   enabled: "{{ unifi_enabled | default(True) }}"
 
+  namespace: "infra-unifi"
   base_image: "{{ _unifi_var_loader.base_image }}"
 
   container:
