--- a/ansible/install_applications/vars/home-homeassistant.yml
+++ b/ansible/install_applications/vars/home-homeassistant.yml
@@ -5,11 +5,14 @@ _homeassistant_var_loader:
   base_image:
     name: homeassistant/home-assistant
     tag: "0.99.3"
+  namespace: "home-homeassistant"
 
 homeassistant:
   enabled: "{{ homeassistant_enabled | default(True) }}"
   
+  namespace: "{{ _homeassistant_var_loader.namespace }}"
   base_image: "{{ _homeassistant_var_loader.base_image }}"
+  servername: "homeassistant.{{ _homeassistant_var_loader.namespace }}.svc.cluster.local"
 
   container:
     image: "{{ docker_registry.url }}/{{ _homeassistant_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _homeassistant_var_loader.base_image.tag }}-custom"
