Migrate home-nodered to a dedicated namespace

--- a/ansible/install_applications/vars/home-nodered.yml
+++ b/ansible/install_applications/vars/home-nodered.yml
@@ -10,6 +10,7 @@ nodered:
   enabled: "{{ nodered_enabled | default(True) }}"
   context_root: "{{ nodered_context_root | default('/') }}"
 
+  namespace: "home-nodered"
   base_image: "{{ _nodered_var_loader.base_image }}"
 
   container:
