--- a/ansible/install_applications/roles/home-nodered.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/home-nodered.deploy/tasks/main.yml
@@ -1,5 +1,10 @@
 ---
 
+- name: Ensure Node-RED namespace exists
+  import_tasks: ../../_base.deploy/tasks/custom-namespace.yml
+  vars:
+    application_namespace: "{{ nodered.namespace }}"
+
 - name: Ensure Node-RED image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
