--- a/ansible/install_applications/vars/home-homeassistant.yml
+++ b/ansible/install_applications/vars/home-homeassistant.yml
@@ -22,6 +22,8 @@ homeassistant:
     limits_memory: "{{ homeassistant_homeassistant_container_limits_memory | default('512Mi') }}"
 
   mqtt:
+    servername: "{{ mosquitto.servername }}"
+    port: 8883
     user: "{{ homeassistant_mqtt_user | default('homeassistant') }}"
     password: "{{ homeassistant_mqtt_password | default('clear_password') }}"
 
