--- a/ansible/install_applications/vars/home-mosquitto.yml
+++ b/ansible/install_applications/vars/home-mosquitto.yml
@@ -5,11 +5,14 @@ _mosquitto_var_loader:
   base_image:
     name: "eclipse-mosquitto"
     tag: "1.6.7"
+  namespace: "home-mosquitto"
 
 mosquitto:
   enabled: "{{ mosquitto_enabled | default(True) }}"
 
+  namespace: "{{ _mosquitto_var_loader.namespace }}"
   base_image: "{{ _mosquitto_var_loader.base_image }}"
+  servername: "mosquitto.{{ _mosquitto_var_loader.namespace }}.svc.cluster.local"
 
   container:
     image: "{{ docker_registry.url }}/{{ _mosquitto_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _mosquitto_var_loader.base_image.tag }}"
@@ -20,4 +23,3 @@ mosquitto:
 
   listeners: "{{ mosquitto_listeners | default([]) }}"
   credentials: "{{ mosquitto_credentials | default([]) }}"
-  exposed_namespaces: "{{ mosquitto_exposed_namespaces | default(['default']) }}"
