Migrate home-roomassistant to a dedicated namespace

--- a/ansible/install_applications/vars/home-roomassistant.yml
+++ b/ansible/install_applications/vars/home-roomassistant.yml
@@ -9,6 +9,7 @@ _roomassistant_var_loader:
 roomassistant:
   enabled: "{{ roomassistant_enabled | default(True) }}"
 
+  namespace: "home-roomassistant"
   base_image: "{{ _roomassistant_var_loader.base_image }}"
 
   container:
