--- a/ansible/install_applications/roles/_base.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/_base.deploy/defaults/main.yml
@@ -2,3 +2,4 @@
 
 custom_ssl_pki_root_dir: /etc/ssl/custom
 kubernetes_glusterfs_endpoint: glusterfs-cluster
+kubernetes_nas_nfs_storage_class_name: nas-nfs
