Migrate stream-plex to a dedicated namespace

--- a/ansible/install_applications/vars/stream-plex.yml
+++ b/ansible/install_applications/vars/stream-plex.yml
@@ -9,6 +9,7 @@ _plex_var_loader:
 plex:
   enabled: "{{ plex_enabled | default(True) }}"
 
+  namespace: "stream-plex"
   base_image: "{{ _plex_var_loader.base_image }}"
 
   container:
