Migrate download-sickchill to a dedicated namespace

--- a/ansible/install_applications/roles/download-sabnzbd.deploy/defaults/main.yml
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/defaults/main.yml
@@ -4,9 +4,16 @@ sabnzbd_enabled: true
 
 sabnzbd_nzbToMedia_config_sickbeard:
   tv:
-    enabled: 0
-    host: sickchill.default
+    enabled: 1
+    host: "{{ sickchill.servername }}"
     port: 80
-    api_key: "{{ sickchill.api_key }}"
-    web_root: "{{ sickchill.context_root }}"
+    api_key: "{{ sickchill_api_key }}"
+    web_root: "{{ sickchill_context_root }}"
+    ssl: 0
+  anime:
+    enabled: 1
+    host: "{{ sickchill.servername }}"
+    port: 80
+    api_key: "{{ sickchill_api_key }}"
+    web_root: "{{ sickchill_context_root }}"
     ssl: 0
