--- a/ansible/install_applications/roles/download-sickchill.deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/download-sickchill.deploy/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Ensure Sickchill namespace exists
+  import_tasks: ../../_base.deploy/tasks/custom-namespace.yml
+  vars:
+    application_namespace: "{{ sickchill.namespace }}"
+    create_nfs_pvc: yes
+
 - name: Ensure Sickchill image is up-to-date in the private registry
   import_tasks: ../../_base.deploy/tasks/docker-image-private-registry.yml
   vars:
