--- a/ansible/install_applications/vars/download-sickchill.yml
+++ b/ansible/install_applications/vars/download-sickchill.yml
@@ -5,11 +5,14 @@ _sickchill_var_loader:
   base_image:
     name: "linuxserver/sickchill"
     tag: "amd64-e0947596-ls19"
+  namespace: "download-sickchill"
 
 sickchill:
   enabled: "{{ sickchill_enabled | default(True) }}"
 
+  namespace: "{{ _sickchill_var_loader.namespace }}"
   base_image: "{{ _sickchill_var_loader.base_image }}"
+  servername: "sickchill.{{ _sickchill_var_loader.namespace }}.svc.cluster.local"
 
   container:
     image: "{{ docker_registry.url }}/{{ _sickchill_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _sickchill_var_loader.base_image.tag }}"
