--- a/ansible/install_applications/vars/download-pyload.yml
+++ b/ansible/install_applications/vars/download-pyload.yml
@@ -13,6 +13,7 @@ _pyload_var_loader:
 pyload:
   enabled: "{{ pyload_enabled | default(True) }}"
 
+  namespace: "download-pyload"
   base_image: "{{ _pyload_var_loader.base_image }}"
   repo: "{{ _pyload_var_loader.repo }}"
 
