--- a/ansible/install_applications/vars/download-sabnzbd.yml
+++ b/ansible/install_applications/vars/download-sabnzbd.yml
@@ -5,11 +5,14 @@ _sabnzbd_var_loader:
   base_image:
     name: "linuxserver/sabnzbd"
     tag: "amd64-2.3.9-0ubuntu1jcfp118.04-u-ls33"
+  namespace: "download-sabnzbd"
 
 sabnzbd:
   enabled: "{{ sabnzbd_enabled | default(True) }}"
 
+  namespace: "{{ _sabnzbd_var_loader.namespace }}"
   base_image: "{{ _sabnzbd_var_loader.base_image }}"
+  servername: "sabnzbd.{{ _sabnzbd_var_loader.namespace }}.svc.cluster.local"
 
   container:
     image: "{{ docker_registry.url }}/{{ _sabnzbd_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _sabnzbd_var_loader.base_image.tag }}-custom"
