Clean labels for infra-kubernetes-dashboard

--- a/ansible/install_applications/vars/infra-kubernetes-dashboard.yml
+++ b/ansible/install_applications/vars/infra-kubernetes-dashboard.yml
@@ -12,6 +12,14 @@ kubernetes_dashboard:
   namespace: "infra-kubernetes-dashboard"
   base_image: "{{ _kubernetes_dashboard_var_loader.base_image }}"
 
+  labels_def:
+    app.kubernetes.io/name: kubernetes-dashboard
+    app.kubernetes.io/component: dashboard
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _kubernetes_dashboard_var_loader.base_image.tag }}"
+    app.kubernetes.io/part-of: kubernetes-dashboard
+
   container:
     image: "{{ docker_registry.url }}/{{ _kubernetes_dashboard_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _kubernetes_dashboard_var_loader.base_image.tag }}"
     requests_cpu: "{{ kubernetes_dashboard_container_requests_cpu | default('50m') }}"
@@ -28,6 +36,14 @@ _kubernetes_dashboard_metrics_scraper_var_loader:
   
 kubernetes_dashboard_metrics_scraper:
   base_image: "{{ _kubernetes_dashboard_metrics_scraper_var_loader.base_image }}"
+
+  labels_def:
+    app.kubernetes.io/name: kubernetes-dashboard
+    app.kubernetes.io/component: metrics-scraper
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _kubernetes_dashboard_metrics_scraper_var_loader.base_image.tag }}"
+    app.kubernetes.io/part-of: kubernetes-dashboard
 
   container:
     image: "{{ docker_registry.url }}/{{ _kubernetes_dashboard_metrics_scraper_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _kubernetes_dashboard_metrics_scraper_var_loader.base_image.tag }}"
