--- a/ansible/install_applications/vars/infra-reloader.yml
+++ b/ansible/install_applications/vars/infra-reloader.yml
@@ -12,6 +12,13 @@ reloader:
   namespace: "infra-reloader"
   base_image: "{{ _reloader_var_loader.base_image }}"
 
+  labels_def:
+    app.kubernetes.io/name: reloader
+    app.kubernetes.io/component: reloader
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _reloader_var_loader.base_image.tag }}"
+
   container:
     image: "{{ docker_registry.url }}/{{ _reloader_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _reloader_var_loader.base_image.tag }}"
     requests_cpu: "{{ reloader_container_requests_cpu | default('100m') }}"
