--- a/ansible/install_applications/vars/infra-gotify.yml
+++ b/ansible/install_applications/vars/infra-gotify.yml
@@ -13,6 +13,13 @@ gotify:
   namespace: "{{ _gotify_var_loader.namespace }}"
   base_image: "{{ _gotify_var_loader.base_image }}"
   servername: "gotify.{{ _gotify_var_loader.namespace }}.svc.cluster.local"
+  
+  labels_def:
+    app.kubernetes.io/name: gotify
+    app.kubernetes.io/component: gotify
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _gotify_var_loader.base_image.tag }}"
 
   container:
     image: "{{ docker_registry.url }}/gotify-server:{{ _gotify_var_loader.base_image.tag }}"
