Clean labels for auth-lemonldap

--- a/ansible/install_applications/vars/auth-lemonldap.yml
+++ b/ansible/install_applications/vars/auth-lemonldap.yml
@@ -11,6 +11,13 @@ lemonldap:
 
   namespace: "auth-lemonldap"
   base_image: "{{ _lemonldap_var_loader.base_image }}"
+  
+  labels_def:
+    app.kubernetes.io/name: lemonldap
+    app.kubernetes.io/component: lemonldap
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _lemonldap_var_loader.base_image.tag }}"
 
   container:
     image: "{{ docker_registry.url }}/{{ _lemonldap_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _lemonldap_var_loader.base_image.tag }}-custom"
