--- a/ansible/install_applications/vars/logging-kibana.yml
+++ b/ansible/install_applications/vars/logging-kibana.yml
@@ -11,6 +11,13 @@ kibana:
 
   namespace: "logging-kibana"
   base_image: "{{ _kibana_var_loader.base_image }}"
+  
+  labels_def:
+    app.kubernetes.io/name: kibana
+    app.kubernetes.io/component: kibana
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _kibana_var_loader.base_image.tag }}"
 
   container:
     image: "{{ docker_registry.url }}/{{ _kibana_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _kibana_var_loader.base_image.tag }}"
