Clean labels for monitoring-kube-state-metrics

--- a/ansible/install_applications/vars/monitoring-kube-state-metrics.yml
+++ b/ansible/install_applications/vars/monitoring-kube-state-metrics.yml
@@ -12,6 +12,13 @@ kube_state_metrics:
 
   namespace: "monitoring-kube-state-metrics"
   base_image: "{{ _kube_state_metrics_var_loader.base_image }}"
+  
+  labels_def:
+    app.kubernetes.io/name: kube-state-metrics
+    app.kubernetes.io/component: kube-state-metrics
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _kube_state_metrics_var_loader.base_image.tag }}"
 
   container:
     image: "{{ docker_registry.url }}/{{ _kube_state_metrics_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _kube_state_metrics_var_loader.base_image.tag }}"
