Clean labels for monitoring-nginx-exporter

--- a/ansible/install_applications/vars/monitoring-nginx-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-nginx-exporter.yml
@@ -11,6 +11,13 @@ nginx_exporter:
 
   namespace: "monitoring-nginx-exporter"
   base_image: "{{ _nginx_exporter_var_loader.base_image }}"
+  
+  labels_def:
+    app.kubernetes.io/name: nginx-exporter
+    app.kubernetes.io/component: nginx-exporter
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _nginx_exporter_var_loader.base_image.tag }}"
 
   container:
     image: "{{ docker_registry.url }}/{{ _nginx_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _nginx_exporter_var_loader.base_image.tag }}"
