Clean labels for monitoring-nginx-log-exporter

--- a/ansible/install_applications/vars/monitoring-nginx-log-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-nginx-log-exporter.yml
@@ -12,6 +12,13 @@ nginx_log_exporter:
 
   namespace: "monitoring-nginx-log-exporter"
   base_image: "{{ _nginx_log_exporter_var_loader.base_image }}"
+  
+  labels_def:
+    app.kubernetes.io/name: nginx-log-exporter
+    app.kubernetes.io/component: nginx-log-exporter
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _nginx_log_exporter_var_loader.base_image.tag }}"
 
   container:
     image: "{{ docker_registry.url }}/{{ _nginx_log_exporter_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _nginx_log_exporter_var_loader.base_image.tag }}"
