Clean labels for monitoring-release-watcher

--- a/ansible/install_applications/vars/monitoring-release-watcher.yml
+++ b/ansible/install_applications/vars/monitoring-release-watcher.yml
@@ -10,6 +10,13 @@ release_watcher:
   enabled: "{{ release_watcher_enabled | default(True) }}"
 
   namespace: "monitoring-release-watcher"
+  
+  labels_def:
+    app.kubernetes.io/name: release-watcher
+    app.kubernetes.io/component: release-watcher
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _release_watcher_var_loader.repo.version }}-custom"
 
   container:
     image: "{{ docker_registry.url }}/release-watcher:{{ _release_watcher_var_loader.repo.version }}-custom"
