--- a/ansible/install_applications/vars/monitoring-apcups-exporter.yml
+++ b/ansible/install_applications/vars/monitoring-apcups-exporter.yml
@@ -18,6 +18,13 @@ apcups_exporter:
   namespace: "monitoring-apcups-exporter"
   base_image: "{{ _apcups_exporter_var_loader.base_image }}"
   base_image_build: "{{ _apcups_exporter_var_loader.base_image_build }}"
+  
+  labels_def:
+    app.kubernetes.io/name: apcups-exporter
+    app.kubernetes.io/component: apcups-exporter
+
+  labels_desc:
+    app.kubernetes.io/version: "{{ _apcups_exporter_var_loader.repo.version }}-custom"
 
   container:
     image: "{{ docker_registry.url }}/apcups-exporter:{{ _apcups_exporter_var_loader.repo.version }}-custom"
